add profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Márton Fleck"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "PhD candidate in Economics at Central European University"
   location         : "Budapest, Hungary"
   employer         :
